--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Converter">Converter</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Converters/Converter">Converter</a>
                         </li>
                     </ul>
                 </div>
