--- a/src/MathFlow/Pages/Account/Register.cshtml
+++ b/src/MathFlow/Pages/Account/Register.cshtml
@@ -53,6 +53,19 @@
                             </p>
                         </div>
                     </form>
+                    
+                    <hr />
+                    
+                    <div class="mt-3">
+                        <h4>Or register with external account</h4>
+                        <form method="post" asp-page-handler="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                            <div class="d-grid">
+                                <button type="submit" class="btn btn-outline-secondary" name="provider" value="Google">
+                                    <i class="bi bi-google"></i> Sign up with Google
+                                </button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
