--- a/src/MathFlow/Pages/Account/TwoFactorSetup.cshtml
+++ b/src/MathFlow/Pages/Account/TwoFactorSetup.cshtml
@@ -1,4 +1,4 @@
-@page
+@page "/account/two-factor-setup"
 @model TwoFactorSetupModel
 @{
     ViewData["Title"] = "Set Up Two-Factor Authentication";
