--- a/src/MathFlow/Pages/Converter.cshtml
+++ b/src/MathFlow/Pages/Converter.cshtml
@@ -1,5 +1,5 @@
-@page
-@model Converter
+@page "/converter"
+@model MathFlow.Pages.Converter
 
 @{
     ViewData["Title"] = "OMML to MathML Converter";
