--- a/src/MathFlow/Pages/Settings/Password.cshtml
+++ b/src/MathFlow/Pages/Settings/Password.cshtml
@@ -1,5 +1,5 @@
-@page
-@model MathFlow.Pages.Identity.Manage.ChangePasswordModel
+@page "/settings/password"
+@model MathFlow.Pages.Settings.PasswordModel
 @{
     ViewData["Title"] = "Change Password";
 }
