--- a/src/MathFlow/Pages/Settings/Security.cshtml
+++ b/src/MathFlow/Pages/Settings/Security.cshtml
@@ -1,5 +1,5 @@
-@page
-@model MathFlow.Pages.Identity.Manage.TwoFactorAuthenticationModel
+@page "/settings/security"
+@model MathFlow.Pages.Settings.SecurityModel
 @{
     ViewData["Title"] = "Two-Factor Authentication";
 }
