--- a/src/MathFlow/Pages/Account/AccessDenied.cshtml
+++ b/src/MathFlow/Pages/Account/AccessDenied.cshtml
@@ -1,4 +1,4 @@
-@page
+@page "/account/access-denied"
 @model MathFlow.Pages.Account.AccessDeniedModel
 @{
     ViewData["Title"] = "Access Denied";
@@ -12,7 +12,7 @@
                 <p>You do not have permission to access this page.</p>
                 <hr>
                 <p class="mb-0">
-                    <a asp-page="/Public/Index" class="btn btn-primary">Return to home</a>
+                    <a asp-page="/Index" class="btn btn-primary">Return to home</a>
                 </p>
             </div>
         </div>
